# projet-qualiteprog

./: .gitignore  CMakeLists.txt  Evaluation.cpp  Evaluation.h  EvaluationAdaptative.cpp  EvaluationAdaptative.h  EvaluationSecondeChance.cpp  EvaluationSecondeChance.h  EvaluationTest.cpp  EvaluationTest.h  QuestionnaireDoctestCode3.txt  README.md  evaluation.cpp  evaluation.h  evaluationAdaptative.cpp  evaluationAdaptative.h  evaluationSecondeChance.cpp  evaluationSecondeChance.h  evaluationTest.cpp  evaluationTest.h  gestionnaireQuestionnaire.cpp  gestionnaireQuestionnaire.h  gestionnaireQuestionnaireTest.cpp  main.cpp  question.cpp  question.h  questionChoixMultiples.cpp  questionChoixMultiples.h  questionChoixMultiplesTest.cpp  questionNumerique.cpp  questionNumerique.h  questionTest.cpp  questionText.cpp  questionText.h  questionTexte.cpp  questionTexte.h  questionnaire.cpp  questionnaire.h  questionnaireTest.cpp  reponse.h  (+1 more)
apprentissage/: apprentissage.cpp  apprentissage.h
evaluation/: evaluation.cpp  evaluation.h  evaluationAdaptative.cpp  evaluationAdaptative.h  evaluationSecondeChance.cpp  evaluationSecondeChance.h  evaluationTest.cpp  evaluationTest.h  gestionnaireEvaluation.cpp  gestionnaireEvaluation.h
evaluation/testsDoctest/: test_evaluation.cpp  test_evaluationAdaptative.cpp  test_evaluationSecondeChance  test_evaluationSecondeChance.cpp  test_evaluationTest.cpp  test_gestionnaireEvaluation.cpp
gestion_Visionnage/gestion_Visionnage/: anime.cpp  anime.h  animecontroleur.h  episode.cpp  episode.h  gestionnaire_anime.cpp  gestionnaire_anime.h  main.cpp  saison.cpp  saison.h
questionnaire/: gestionnaireQuestionnaire.cpp  gestionnaireQuestionnaire.h  question.cpp  question.h  questionChoixMultiples.cpp  questionChoixMultiples.h  questionNumerique.cpp  questionNumerique.h  questionTexte.cpp  questionTexte.h  questionnaire.cpp  questionnaire.h  reponse.cpp
test/: QuestionnaireDoctestCode0.txt  QuestionnaireDoctestCode2.txt  QuestionnaireDoctestCode3.txt  gestionnaireQuestionnaireTest.cpp  questionnaireTest.cpp  test_evaluation.cpp  test_evaluationAdaptative.cpp  test_evaluationSecondeChance.cpp  test_evaluationTest.cpp  test_gestionnaireEvaluation.cpp  test_gestionnaireQuestionnaire.cpp  test_question.cpp  test_questionnaire.cpp  test_reponse.cpp  testmain.cpp
